--- a/css/style.css
+++ b/css/style.css
@@ -1,236 +1,378 @@
 * {
-    margin: 0;
-    padding: 0;
-   
+  margin: 0;
+  padding: 0;
 }
 
 @font-face {
-    font-family: Sans-Regular;  /**Arial Narrow, sans-serif**/
-    src: url("../fonts/OpenSans-Regular.woff");
-    font-weight: 400;
-    font-style: normal;
+  font-family: Sans-Regular; /**Arial Narrow, sans-serif**/
+  src: url("../fonts/OpenSans-Regular.woff");
+  font-weight: 400;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: Sans-Bold; /**Arial Black, sans-serif**/
-    src: url("../fonts/OpenSans-Bold.woff");
-    font-weight: 700;
-    font-style: normal;
+  font-family: Sans-Bold; /**Arial Black, sans-serif**/
+  src: url("../fonts/OpenSans-Bold.woff");
+  font-weight: 700;
+  font-style: normal;
 }
 
 .background-styles {
-    position: relative;
-    height: 560px;
-    max-height: 650px;
-    width: 100%;
-    background-repeat: no-repeat;
-    background-position: top;
-    background-size: cover;
-    background-color: #14173a;
+  position: relative;
+  height: 560px;
+  max-height: 650px;
+  width: 100%;
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: cover;
+  background-color: #14173a;
 }
 
 .background-styles::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-color: #14173a;
-    opacity: 0.9;
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: #14173a;
+  opacity: 0.9;
 }
 
 .header {
-    background-image: url("../images/football_767.jpg");
+  display: flex;
+  justify-content: center;
+  background-image: url("../images/football_767.jpg");
 }
 
 .header-container {
-    width: 320px;
-    margin-right: auto;
-    margin-left: auto;
-    position: relative;
-    z-index: 1;
-
-    
+  width: 320px;
+  position: relative;
+  z-index: 1;
 }
 
 .logo {
-    padding-top: 30px;
-    text-align: center;
+  padding-top: 30px;
+  text-align: center;
 }
 
 .logo-icon {
-    width: 130px;
-    height: 35px;
-    fill: #ffffff;
+  width: 130px;
+  height: 35px;
+  fill: #ffffff;
 }
 
 .title {
-    padding: 85px 20px 0 20px;
-    
+  padding: 85px 20px 0 20px;
 }
 
 .header-title {
-    font-family: Sans-Bold, "Arial Black", sans-serif;
-    text-transform: uppercase;
-    font-size: 28px;
-    color: #ffffff;
+  font-family: Sans-Bold, "Arial Black", sans-serif;
+  text-transform: uppercase;
+  font-size: 28px;
+  color: #ffffff;
 }
 
 .header-position {
-    display: block;
-    padding-top: 10px;
-    padding-left: 45px;
+  display: block;
+  padding-left: 45px;
 }
 
 .btn-shop {
-    padding-top: 85px;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+  padding-top: 85px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .shop-inner {
-    display: flex;
-    width: 120px;
+  display: flex;
+  width: 120px;
 }
 
 .shop-link {
-    display: flex;
-    justify-content: center;
-    width: 280px;
-    height: 35px;
-    box-sizing: border-box;
-    border-radius: 20px;
-    background-color: #5e42b0;
-    text-decoration: none;
+  display: flex;
+  justify-content: center;
+  width: 280px;
+  height: 35px;
+  box-sizing: border-box;
+  border-radius: 20px;
+  background-color: #5e42b0;
+  text-decoration: none;
 }
 
-.shop-link:nth-child(1n+2) {
-    margin-top: 3vh;
+.shop-link:nth-child(1n + 2) {
+  margin-top: 24px;
 }
 
 .shop-icon {
-    width: 25px;
-    fill: #ffffff;
+  width: 25px;
+  fill: #ffffff;
 }
 
-.conteinet-shop {
-    padding-left: 6px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.conteiner-shop {
+  padding-left: 6px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .text-link-regular {
-    display: block;
-    font-family: Sans-Regular, "Arial Narrow", sans-serif;
-    text-transform: uppercase;
-    font-size: 8px;
-    color: #ffffff;
+  display: block;
+  font-family: Sans-Regular, "Arial Narrow", sans-serif;
+  text-transform: uppercase;
+  font-size: 8px;
+  color: #ffffff;
 }
 
 .text-link-bold {
-    font-family: Sans-Bold, "Arial Black", sans-serif;
-    text-transform: uppercase;
-    font-size: 8px;
-    color: #ffffff;
+  font-family: Sans-Bold, "Arial Black", sans-serif;
+  text-transform: uppercase;
+  font-size: 8px;
+  color: #ffffff;
 }
 
 /** Конец header **/
 
-.content-holder {
-    position: relative;
+
+.aside-flex-box-center{
+  display: flex;
+  justify-content: center;
 }
 
-.content-flexbox {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.aside-flex-box-center:nth-of-type(1) {
+  padding-top: 10px;
+  padding-bottom: 225px;
 }
 
-.content-header { 
-    padding-top: 25px;   
-    background-color: #ffffff;
+.aside-flex-box-center:nth-of-type(1n+2) {
+  padding-bottom: 45px;
 }
 
-.content-title {
-    width: 320px;
-    box-sizing: border-box;
-    padding-left: 20px;
-    padding-right: 20px;
-
-    font-family: Sans-Bold, "Arial Black", sans-serif;
-    text-transform: uppercase;
-    font-size: 50px;
-    color: #e7e7e7;
+.aside-flex-box-center:nth-of-type(2) {
+  padding-top: 75px;
 }
 
-.content-img-box {
-    height: 225px;
+.aside-flex-box-center:nth-of-type(1n+3) {
+  padding-top: 50px;
 }
 
-.content-img {
-    position: absolute;
+.aside-flex-box-center:nth-of-type(3n+2) {
+  background-color: #fafafa;
 }
 
-.content-text {
-    padding-top: 70px;
-    padding-bottom: 50px;
+.aside-flex-box-center:nth-of-type(3n+3) {
+  background-color: #f5f4f9;
 }
 
-.content-text:nth-child(1n+2) {
-    padding-top: 50px;
-}
-.content-text:nth-of-type(3n+1) {
-    background-color: #fafafa;
+.aside-flex-box-center:nth-of-type(3n+4) {
+  background-color: #5e42b0;
 }
 
-.content-text:nth-of-type(3n+2) {
-    background-color: #f5f4f9;
+.background-gorblue:nth-of-type(3n+4) {
+  background-color: #090c35;
 }
 
-.content-text:nth-of-type(3n+3) {
-    background-color: #5e42b0;
+.aside-position-img {
+  position: relative;
 }
 
-.content-text-box {
-    box-sizing: border-box;
-    width: 320px;
-    padding-left: 20px;
-    padding-right: 20px;
+.aside-width-box {
+  width: 320px;   /**меняем шырину тут**/ 
 }
 
-.content-text-title {
-    display: flex;
-    
-    font-family: Sans-Bold, "Arial Black", sans-serif;
-    text-transform: uppercase;
-    font-size: 23px;
-    color: #c1c1c1;
+.aside-content-position-right {
+  display: flex;
+  justify-content: center; /**меняем выравнивание**/
 }
 
-.content-text-number {
-    padding-right: 5px;
-    font-size: 14px;
-    color: #000000;
-    line-height: 21px;
+.aside-content-position-left {
+  display: flex;
+  justify-content: center;  /**меняем выравнивание**/
 }
 
-.content-text-number::after {
-    content: "";
-    display: block;
-    position: relative;
-    bottom: 0px;
-    width: 15px;
-    height: 4px;
-    border-radius: 2px;
-    background: #5e42b0;
+.padding-left, 
+.padding-right {
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
-.content-article {
-    padding-top: 15px;
-    font-family: Sans-Regular, "Arial Narrow", sans-serif;
-    font-size: 15px;
-    color: #000000;
+.aside-header-title {
+  font-family: Sans-Bold, "Arial Black", sans-serif;
+  text-transform: uppercase;
+  font-size: 50px;
+  color: #e7e7e7;
+}
+
+.aside-content-img-position-left {
+  position: absolute;
+  top: 80px;
+}
+
+.aside-content-img-position-right {
+  position: absolute;
+  top: 80px;
+}
+
+.aside-text-title {
+  display: flex;
+  font-family: Sans-Bold, "Arial Black", sans-serif;
+  text-transform: uppercase;
+  font-size: 23px;
+  color: #c1c1c1;
+}
+
+.text-title-nomber {
+  font-family: Sans-Bold, "Arial Black", sans-serif;
+  font-size: 14px;
+  line-height: 21px;
+  color: #000000;
+}
+
+.text-title-nomber-purpur{
+  color: #8765dd;
+}
+
+.text-title-nomber-padding {
+  padding-right: 4px;
+}
+
+.text-title-nomber:after {
+  content: "";
+  display: block;
+  height: 4px;
+  width: 16px;
+  border-radius: 2px;
+}
+
+.after-color-purpur:after {
+  background: #5e42b0;
+}
+
+.after-color-white:after {
+  background: #ffffff;
+}
+
+.aside-text {
+  font-family: Sans-Regular, "Arial Narrow", sans-serif;
+  font-size: 15px;
+  color: #000000;
+}
+
+.aside-text-white {
+  color: #ffffff;
+}
+/**.content {
+  padding-bottom: 45px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.content {
+  padding-top: 75px;
+}
+
+.content:nth-child(1n + 3) {
+  padding-top: 50px;
+}
+.content:nth-of-type(3n + 1) {
+  background-color: #fafafa;
+}
+
+.content:nth-of-type(3n + 2) {
+  background-color: #f5f4f9;
+}
+
+.content:nth-of-type(3n + 3) {
+  background-color: #5e42b0;
+}
+
+.content-number:after {
+  content: "";
+  display: block;
+  height: 4px;
+  width: 16px;
+  border-radius: 2px;
+}
+
+.number-after-color-purpur:after {
+  background: #5e42b0;
+}
+
+.number-after-color-white:after {
+  background: #ffffff;
+}
+
+.number-after-color-ametist:after {
+  background: #8f7bc8;
+}
+
+.content-number-color:after {
+  background: #ffffff;
+}**/
+
+
+
+
+/** Подвал **/
+
+.footer {
+  display: flex;
+  justify-content: center;
+  background-image: url(../images/game_767.jpg);
+}
+
+.footer-conteiner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  width: 320px;
+  position: relative;
+  z-index: 1;
+}
+
+.footer-logo-icon-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin-top: 100px;
+  height: 75px;
+  width: 75px;
+
+  border-radius: 12px;
+  background-color: #6c4dc6;
+  fill: #ffffff;
+}
+
+.footer-logo-icon {
+  height: 50px;
+}
+
+.footer-text {
+  padding-top: 50px;
+  font-family: Sans-Bold, "Arial Black", sans-serif;
+  text-transform: uppercase;
+  font-size: 32px;
+  color: #ffffff;
+}
+
+.footer-slogan {
+  font-family: Sans-Regular, "Arial Narrow", sans-serif;
+  text-transform: uppercase;
+  font-size: 14px;
+  color: #9b8ec1;
+}
+
+.footer-logo {
+  padding-top: 75px;
+}
+
+.footer-btn-shop {
+  padding-top: 65px;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
