--- a/css/style.css
+++ b/css/style.css
@@ -292,7 +292,9 @@
 
 .post-width-box {
   /** тут пишем flex box и задаем элементам order **/
-  width: 320px;
+  width: 640px;
+  min-width: 83%;
+  max-width: 100%;
 }
 
 .post-img-box {
@@ -300,7 +302,9 @@
 }
 
 .post-img {
-  width: 320px; /**меняем ширину тут**/
+  display: block;
+  
+  width: 100%; /**меняем ширину тут**/
   height: 350px;
 
   object-fit: cover;
@@ -378,7 +382,7 @@
   width: 75px;
 
   border-radius: 12px;
-  background-color: #6c4dc6;
+  background: linear-gradient(#7755d7, #50379a);
   fill: #ffffff;
 }
 
@@ -396,6 +400,7 @@
 }
 
 .footer-slogan {
+  display: block;
   font-family: Sans-Regular, "Arial Narrow", sans-serif;
   text-transform: uppercase;
   font-size: 14px;
@@ -439,7 +444,7 @@
 
   .footer-text {
     padding-top: 40px;
-    font-size: 60px;
+    font-size: 65px;
   }
 
   .footer-slogan {
@@ -613,15 +618,13 @@
   }
 
   .post-width-box {
-    width: 768px;
+    width: 960px;
     min-width: 83%;
     max-width: 100%;
   }
 
   .post-img {
-    width: 768px;
-    min-width: 83%;
-    max-width: 100%;
+    width: 100%;
     height: 580px;
   }
 
@@ -659,8 +662,6 @@
     height: 140px;
     width: 140px;
     border-radius: 30px;
-    background-color: #6c4dc6;
-    fill: #ffffff;
   }
 
   .footer-logo-icon {
@@ -926,8 +927,6 @@
     margin-top: 20px;
 
     border-radius: 30px;
-    background-color: #6c4dc6;
-    fill: #ffffff;
   }
 
   .footer-text-holder {
